@@ -12,6 +12,7 @@ import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
@@ -20,7 +21,7 @@ import org.springframework.web.filter.OncePerRequestFilter;
 import javax.crypto.SecretKey;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
-import java.util.Collections;
+import java.util.List;
 import java.util.UUID;
 
 import org.slf4j.Logger;
@@ -57,7 +58,6 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
         String authHeader = request.getHeader("Authorization");
 
-        // Authorization 헤더가 없거나 Bearer 토큰이 아니면 그냥 통과
         if (authHeader == null || !authHeader.startsWith("Bearer ")) {
             filterChain.doFilter(request, response);
             return;
@@ -73,31 +73,28 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
                     .parseSignedClaims(token)
                     .getPayload();
 
-            // 보통 subject에는 userId(UUID)를 넣는 게 가장 깔끔함
             String subject = claims.getSubject();
             String email = claims.get("email", String.class);
 
-            // 이미 인증되어 있으면 중복 세팅하지 않음
             if (subject != null && SecurityContextHolder.getContext().getAuthentication() == null) {
                 UUID userId;
 
                 try {
                     userId = UUID.fromString(subject);
                 } catch (IllegalArgumentException e) {
-                    // subject가 UUID가 아니면 토큰 설계가 현재 코드와 안 맞는 것
                     log.warn("JWT subject is not UUID: {}", subject);
                     filterChain.doFilter(request, response);
                     return;
                 }
 
-                // ✅ 핵심: principal을 CustomPrincipal로 넣는다
                 CustomPrincipal principal = new CustomPrincipal(userId, email);
 
+                // ✅ 권한 최소 1개 부여
                 Authentication authentication =
                         new UsernamePasswordAuthenticationToken(
                                 principal,
                                 null,
-                                Collections.emptyList()
+                                List.of(new SimpleGrantedAuthority("ROLE_USER"))
                         );
 
                 ((UsernamePasswordAuthenticationToken) authentication)
